<resources>
    <string name="app_name">SleepTight</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_to_sleep_tight">Welcom to Sleep Tight!</string>
    <string name="enter">Enter</string>
    <string name="today_s_nquestionnaire">Today’s\nQuestionnaire</string>
    <string name="for_evening">For Evening</string>
    <string name="how_was_your_day_ndid_you_enjoy_it_ntell_us">How was your day?\nDid you enjoy it?\nTell us!</string>
    <string name="to_have_a_better_sleep_quality">To have a better \nsleep quality</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">No account?\nCLick here to sign up!</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="schdule">Sleep Schdule</string>
    <string name="sleeptime">Average sleep time:</string>
    <string name="inspirational_quotes_about_life">Don\'t let yesterday take up\n too much of today.</string>
    <string name="Statistic">Statistic for a day</string>
    <string name="hours">8.3</string>
    <string name="hours_unit">hours</string>
    <string name="stresslevel">Stress level:</string>
    <string name="level_number">2.6</string>
    <string name="Hard_to_sleep">Hard to fall sleep</string>
    <string name="hard_number">1.7</string>
    <string name="Age">Age:</string>
    <string name="sleepschedule">Sleep schedule:</string>
    <string name="logout">Log out</string>
    <string name="username">*username*</string>
    <string name="Editprofile">Edit profile</string>
    <string name="age_number">23</string>
    <string name="time_route">from %d to %d</string>
    <string name="gender_">Male</string>
    <string name="todo">TODO</string>
    <string name="gender_profile">Gender:</string>
    <string name="male">Male</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="female">Female</string>
    <string name="cognitive_test">Cognitive Test</string>
    <string name="email">Email</string>
    <string name="done">Done!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction">In this test, you will see a grid in which 3 dots will appear. Your task is that to memorize the location of the 3 dots. You only have 15s max to remember the location.\n
    After that, you will see a 5*9 grid with Fs and Es, you task is to find all the Es and touch them.\n
    Finally, you will see a blank grid without any dot, your task is to touch the location of the 3 dots you see at the first trail.\n
    Good luck!</string>
    <string name="remember_the_dot_locations">Remember the dot locations!</string>
    <string name="bad_sleep_ngood_luck_next_time">Bad sleep?\nGood luck next time!</string>
    <string name="submit_my_result">Submit my result</string>
    <string name="wrong_answer">Wrong answer</string>

</resources>